<resources>
    <string name="a">Add bookmark</string>
    <string name="b">Add favorite</string>
    <string name="c">Add to homepage</string>
    <string name="d">Allow</string>
    <string name="e">Blank page</string>
    <string name="f">Block domain</string>
    <string name="g">Block link</string>
    <string name="h">Bookmarks</string>
    <string name="i">Choose a folder…</string>
    <string name="j">Close</string>
    <string name="k">Close all tabs</string>
    <string name="l">Close other tabs</string>
    <string name="m">Close tabs to the bottom</string>
    <string name="n">Close tabs to the top</string>
    <string name="o">Copy link</string>
    <string name="p">Copy download link</string>
    <string name="q">Copy link text</string>
    <string name="r">Copy text</string>
    <string name="s">Default location</string>
    <string name="t">Delete</string>
    <string name="u">Delete all</string>
    <string name="v">Refuse</string>
    <string name="w">Download</string>
    <string name="x">Downloads</string>
    <string name="y">Edit</string>
    <string name="z">Favorites</string>
    <string name="a0">Find in page</string>
    <string name="a1">Full-screen</string>
    <string name="a2">History</string>
    <string name="a3">Incognito mode</string>
    <string name="a4">Keep</string>
    <string name="a5">Favorite manager</string>
    <string name="a6">Mark as ad</string>
    <string name="a7">Modify</string>
    <string name="a8">New</string>
    <string name="a9">New tab</string>
    <string name="a_">Night mode</string>
    <string name="aa">Open in background</string>
    <string name="ab">Open in new tab</string>
    <string name="ac">Page info</string>
    <string name="ad">Desktop site</string>
    <string name="ae">Picture mode</string>
    <string name="af">Play with…</string>
    <string name="ag">Preview</string>
    <string name="ah">Re-download</string>
    <string name="aj">Reset</string>
    <string name="ak">Save</string>
    <string name="al">Save image</string>
    <string name="am">Save page</string>
    <string name="an">Saved pages</string>
    <string name="ao">Share</string>
    <string name="ap">View source</string>
    <string name="aq">Tools</string>
    <string name="ar">Translate</string>
    <string name="as">Unblock domain</string>
    <string name="at">Unblock link</string>
    <string name="au">View Cookies</string>
    <string name="av">View image</string>
    <string name="aw">View in settings</string>
    <string name="ax">Webpage</string>
    <string name="ay">Adaptive</string>
    <string name="az">Disable ad blocking for a specific site.</string>
    <string name="b0">Enable ad blocking for a specific site.</string>
    <string name="b1">Enabled: %1$d ads blocked, %2$s saved</string>
    <string name="b2">Add exclude</string>
    <string name="b3">Add filter subscription</string>
    <string name="b4">Add match</string>
    <string name="b5">Add model</string>
    <string name="b6">New script</string>
    <string name="b7">Add shortcut</string>
    <string name="b8">Add site exception</string>
    <string name="b9">Add to home screen</string>
    <string name="b_">Added to homepage successfully</string>
    <string name="ba">Download manager</string>
    <string name="bb">Address bar actions</string>
    <string name="bc">User-agent</string>
    <string name="bd">Set user-agent for a specific site.</string>
    <string name="be">Android (Phone)</string>
    <string name="bf">Android (Tablet)</string>
    <string name="bg">Chrome (PC)</string>
    <string name="bh">Custom</string>
    <string name="bi">Windows (IE 11)</string>
    <string name="bj">iPad</string>
    <string name="bk">iPhone</string>
    <string name="bl">macOS</string>
    <string name="bm">Symbian</string>
    <string name="bn">Windows (Chrome)</string>
    <string name="bo">Windows (IE 11)</string>
    <string name="bp">Agree</string>
    <string name="bq">You need to agree and accept all the terms before you start using our service.</string>
    <string name="br">AI</string>
    <string name="bs">AI prompt</string>
    <string name="bt">AI service provider</string>
    <string name="bu">AI settings</string>
    <string name="bv">All sites</string>
    <string name="bw">All time</string>
    <string name="bx">Allow</string>
    <string name="by">Allow page redirection?</string>
    <string name="bz">Allow page redirection to %1$s?</string>
    <string name="c0">Allow once</string>
    <string name="c1">Allow webpage access to clipboard</string>
    <string name="c2">Allow website to open %1$s?</string>
    <string name="c3">Allowed</string>
    <string name="c4">It has already been set as default</string>
    <string name="c5">Always restore</string>
    <string name="c6">androidx.startup</string>
    <string name="c7">API key</string>
    <string name="c8">Via is downloading files</string>
    <string name="c9">Tap to view downloads</string>
    <string name="c_">Via</string>
    <string name="ca">Appearance</string>
    <string name="cb">Ascii2D</string>
    <string name="cc">Ask first</string>
    <string name="cd" formatted="false">Are you sure you want to copy text from %DOMAIN%?</string>
    <string name="ce">Assistant</string>
    <string name="cf">Auto sync</string>
    <string name="cg">Available variables</string>
    <string name="ch">Back/Forward gesture</string>
    <string name="ci">Color</string>
    <string name="cj">Image</string>
    <string name="ck">Baidu</string>
    <string name="cl">Bing</string>
    <string name="cm">Block</string>
    <string name="cn">Block third-party cookies</string>
    <string name="co">Ad blocking</string>
    <string name="cp">"Blocked: %1$s
Refresh to take effect."</string>
    <string name="cq">Block pop-up</string>
    <string name="cr">Blocked pop-up window</string>
    <string name="cs">Blocked</string>
    <string name="ct">Blur effect</string>
    <string name="cu">Enable blur effect for the app. Some devices may not support it.</string>
    <string name="cv">Bold</string>
    <string name="cw">Bookmark added</string>
    <string name="cx">Bookmarks data is too big to upload, but other data will be uploaded normally. Continue?</string>
    <string name="cy">Bookmarks exported successfully</string>
    <string name="cz">%1$d bookmarks imported</string>
    <string name="d0">Built-in download manager</string>
    <string name="d1">Camera</string>
    <string name="d2">Allow a specific site to use your camera.</string>
    <string name="d3">Block a specific site to use your camera.</string>
    <string name="d4">Ask first before allowing sites to use your camera</string>
    <string name="d5">Cancel all</string>
    <string name="d6">It can be downloaded only from \"http\" or \"https\" URLs.</string>
    <string name="d7">Cannot read this page aloud</string>
    <string name="d8">It can only work with \"http\" or \"https\" URLs.</string>
    <string name="d9">It can only work if JavaScript is allowed.</string>
    <string name="d_">It cannot work on this site.</string>
    <string name="da">Casual chat</string>
    <string name="db">Basics</string>
    <string name="dc">Content</string>
    <string name="dd">Permissions</string>
    <string name="de">&lt;b>ISSUED TO&lt;/b>&lt;br /> &lt;b>Common Name (CN)&lt;/b>&lt;br /> %1$s &lt;br />&lt;b>Organization (O)&lt;/b>&lt;br /> %2$s &lt;br />&lt;b>Organizational Unit (OU)&lt;/b>&lt;br /> %3$s &lt;br />&lt;br />&lt;b>ISSUED BY&lt;/b>&lt;br /> &lt;b>Common Name (CN)&lt;/b>&lt;br /> %4$s &lt;br />&lt;b>Organization (O)&lt;/b>&lt;br /> %5$s &lt;br />&lt;br />&lt;b>VALIDITY PERIOD&lt;/b>&lt;br /> &lt;b>Issued On&lt;/b>&lt;br /> %6$s &lt;br />&lt;b>Expires On&lt;/b>&lt;br /> %7$s &lt;br /></string>
    <string name="df">&lt;b>SHA-256 FINGERPRINTS&lt;/b>&lt;br /> &lt;b>Certificate&lt;/b>&lt;br /> %1$s &lt;br />&lt;b>Public Key&lt;/b>&lt;br /> %2$s &lt;br /></string>
    <string name="dg">Certificate information</string>
    <string name="dh">Check for updates</string>
    <string name="di">Permission denied. Would you like to set it in settings now?</string>
    <string name="dj">Checking for updates</string>
    <string name="dk">Chinese</string>
    <string name="dl">Clear data</string>
    <string name="dm">Clear data on exit</string>
    <string name="dn">Clear messages</string>
    <string name="do">Clear search history</string>
    <string name="dp">Are you sure you want to clear search history?</string>
    <string name="dq">Clear the website icon cache</string>
    <string name="dr">Note that this will clear all the favorite icons on the homepage. Each icon will be downloaded the next time you visit the corresponding website.</string>
    <string name="ds">Clipboard</string>
    <string name="dt">Allow a specific site to use your clipboard.</string>
    <string name="du">Block a specific site to use your clipboard.</string>
    <string name="dv">Allow sites to use your clipboard</string>
    <string name="dw">Ask first before allowing sites to use your clipboard</string>
    <string name="dx">Block sites to use your clipboard</string>
    <string name="dy">Close %s</string>
    <string name="dz">Closed %1$s</string>
    <string name="e0">Cloud data server</string>
    <string name="e1">Service unavailable.</string>
    <string name="e2">Color mode</string>
    <string name="e3">Auto-adjust color of toolbars</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
    <string name="e4">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="e5">Confirm to clear</string>
    <string name="e6">Confirm to delete</string>
    <string name="e7">Confirm to leave</string>
    <string name="e8">Connection timed out</string>
    <string name="e9">Contact us</string>
    <string name="e_">Content</string>
    <string name="ea">Continue loading</string>
    <string name="eb">Cookies</string>
    <string name="ec">Allow sites to save and read cookie data</string>
    <string name="ed">Allowed, except third party</string>
    <string name="ee">Copy all</string>
    <string name="ef">Copy password</string>
    <string name="eg">Link copied to clipboard</string>
    <string name="eh">Copy username</string>
    <string name="ei">Corner radius</string>
    <string name="ej">Close</string>
    <string name="ek">"We're sorry that the app crashed."</string>
    <string name="el">Something went wrong. :(</string>
    <string name="em">Restart</string>
    <string name="en">Create shortcut for %1$s successfully</string>
    <string name="eo">Custom CSS</string>
    <string name="ep">Custom filter</string>
    <string name="eq">Custom filters</string>
    <string name="er">Including custom filters and marked ads</string>
    <string name="fs">Paste text</string>
    <string name="fu">Swap language</string>
    <string name="gk">Resume</string>
    <string name="ha">Empty</string>
    <string name="in">Fastforward</string>
    <string name="k3">Folder</string>
    <string name="k4">Password</string>
    <string name="k8">Username</string>
    <string name="m9">Lock</string>
    <string name="md">Expand</string>
    <string name="me">Please click on the ad area to mark it</string>
    <string name="mf">Move view</string>
    <string name="mg">Shrink</string>
    <string name="nm">Navigation up</string>
    <string name="pg">Orientation</string>
    <string name="q3">Passwords</string>
    <string name="qb">Picture in picture</string>
    <string name="ro">Rewind</string>
    <string name="st">Would you like to set it as homepage?</string>
    <string name="sx">Settings</string>
    <string name="sz">Advanced</string>
    <string name="tn">Background</string>
    <string name="tp">Logo</string>
    <string name="tq">Search bar</string>
    <string name="xi">Text</string>
    <string name="yf">Sign in</string>
    <string name="a0w">Uses digest access authentication</string>
</resources>