<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/aa" android:textColor="?ad" android:textColorHint="?ad" android:ellipsize="end" android:gravity="center" android:id="@id/eu" android:paddingLeft="16.0dp" android:paddingTop="4.0dp" android:paddingRight="16.0dp" android:paddingBottom="4.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/me" android:maxLines="1" android:lines="1" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="48.0dp">
        <ImageView android:gravity="center" android:id="@id/cl" android:background="@drawable/p" android:padding="12.0dp" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/ab" android:tint="?a9" android:layout_weight="1.0" android:contentDescription="@string/mf" />
        <TextView android:textColor="?ac" android:gravity="center" android:id="@id/ew" android:background="@drawable/p" android:layout_width="0.0dp" android:layout_height="48.0dp" android:text="@string/md" android:layout_weight="1.0" />
        <TextView android:textColor="?ac" android:gravity="center" android:id="@id/f_" android:background="@drawable/p" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/mg" android:layout_weight="1.0" />
        <TextView android:textColor="?ac" android:gravity="center" android:id="@id/f8" android:background="@drawable/p" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/ak" android:layout_weight="1.0" />
        <TextView android:textColor="?ac" android:gravity="center" android:id="@id/eo" android:background="@drawable/p" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@android:string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
