<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/a9" android:textColor="?ad" android:gravity="center" android:id="@id/ev" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/ha" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/df" android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="48.0dp" />
    <LinearLayout android:layout_gravity="bottom" android:id="@id/cs" android:layout_width="match_parent" android:layout_height="@dimen/g">
        <ImageView android:id="@id/ch" android:background="@drawable/o" android:padding="@dimen/e" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/dh" android:tint="?a9" android:layout_weight="1.0" android:contentDescription="@string/sx" />
        <SeekBar android:id="@id/dh" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="4.0" style="@style/s" />
        <ImageView android:id="@id/cd" android:background="@drawable/o" android:padding="@dimen/e" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/ac" android:tint="?a9" android:layout_weight="1.0" android:contentDescription="@string/ro" />
        <ImageView android:id="@id/ca" android:background="@drawable/o" android:padding="@dimen/e" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/cv" android:tint="?a9" android:layout_weight="1.0" android:contentDescription="@string/gk" />
        <ImageView android:id="@id/c1" android:background="@drawable/o" android:padding="@dimen/e" android:layout_width="0.0dp" android:layout_height="match_parent" android:src="@drawable/bo" android:tint="?a9" android:layout_weight="1.0" android:contentDescription="@string/in" />
        <TextView android:textSize="@dimen/a_" android:typeface="sans" android:textColor="?ac" android:gravity="center" android:id="@id/fc" android:background="@drawable/o" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" />
    </LinearLayout>
</FrameLayout>
