<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="@dimen/a_" android:textColor="?ac" android:gravity="top" android:id="@id/ax" android:background="@android:color/transparent" android:padding="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/xi" android:layout_toLeftOf="@id/cc" android:inputType="textMultiLine|textNoSuggestions" android:layout_toStartOf="@id/cc" />
    <ImageView android:id="@id/cc" android:background="@drawable/q" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/cs" android:tint="?a9" android:layout_alignTop="@id/ax" android:layout_alignParentRight="true" android:contentDescription="@string/fs" android:layout_alignParentEnd="true" />
    <View android:background="?i" android:layout_width="match_parent" android:layout_height="2.0dp" android:layout_below="@id/ax" />
    <ProgressBar android:id="@id/d2" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="2.0dp" android:max="100" android:progress="50" android:indeterminate="false" android:indeterminateOnly="false" android:layout_below="@id/ax" />
    <TextView android:textSize="@dimen/a_" android:textColor="?ac" android:gravity="top" android:id="@id/fi" android:padding="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/by" android:layout_below="@id/ax" android:textIsSelectable="true" android:layout_toStartOf="@id/by" />
    <ImageView android:id="@id/by" android:background="@drawable/q" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/ba" android:tint="?a9" android:layout_alignTop="@id/fi" android:layout_alignParentRight="true" android:contentDescription="@string/r" android:layout_alignParentEnd="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_below="@id/fi">
        <TextView android:textSize="@dimen/aa" android:textColor="?ac" android:gravity="center" android:id="@id/fb" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" />
        <ImageView android:id="@id/ck" android:background="@drawable/q" android:padding="14.0dp" android:layout_width="48.0dp" android:layout_height="match_parent" android:src="@drawable/du" android:tint="?a9" android:contentDescription="@string/fu" />
        <TextView android:textSize="@dimen/aa" android:textColor="?ac" android:gravity="center" android:id="@id/fg" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/cm" android:padding="9.0dp" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_margin="4.0dp" android:src="@drawable/e2" android:tint="@android:color/white" android:contentDescription="@string/ar" />
    </LinearLayout>
</RelativeLayout>
