<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/bx" android:background="@drawable/o" android:padding="@dimen/e" android:layout_width="@dimen/h" android:layout_height="@dimen/g" android:src="@drawable/b2" android:tint="?a9" android:contentDescription="@string/nm" />
    <TextView android:gravity="center_vertical" android:id="@id/fh" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dp" android:text="@string/sz" android:layout_toRightOf="@id/bx" android:layout_alignTop="@id/bx" android:layout_alignBottom="@id/bx" android:textDirection="locale" android:layout_toEndOf="@id/bx" style="@style/a0" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/cp" android:background="@drawable/p" android:paddingLeft="16.0dp" android:paddingTop="6.0dp" android:paddingRight="16.0dp" android:paddingBottom="6.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dp" android:layout_below="@id/fh">
        <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="4.0dp" android:text="@string/a0w" android:layout_weight="1.0" style="@style/a6" />
        <CheckBox android:id="@id/an" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_margin="2.0dp" android:button="?a4" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/p" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="45.0dp" android:layout_marginBottom="4.0dp" android:layout_below="@id/cp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="4.0dp" android:text="@string/k3" style="@style/a6" />
        <EditText android:id="@id/aw" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginRight="0.0dp" android:layout_marginBottom="0.0dp" android:hint="/Via" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:layout_marginStart="16.0dp" android:layout_marginEnd="0.0dp" style="@style/z" />
    </LinearLayout>
</RelativeLayout>
