<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/fl" android:layout_width="match_parent" android:layout_height="32.0dp" />
    <TextView android:textSize="@dimen/a_" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/fh" android:paddingLeft="16.0dp" android:paddingTop="16.0dp" android:paddingRight="16.0dp" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="56.0dp" android:singleLine="true" android:layout_marginEnd="56.0dp" />
    <TextView android:textSize="18.0dp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/f2" android:padding="16.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    <RelativeLayout android:id="@id/dc" android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:textColor="?a9" android:id="@id/bi" android:layout_width="@dimen/b7" android:layout_height="@dimen/b7" android:layout_marginLeft="16.0dp" android:layout_marginTop="@dimen/b5" android:layout_marginRight="16.0dp" android:layout_marginBottom="@dimen/b5" android:layout_above="@id/c7" android:layout_alignParentRight="true" android:layout_alignParentEnd="true">
            <ImageView android:layout_gravity="center" android:id="@id/ci" android:padding="@dimen/b6" android:visibility="gone" android:layout_width="@dimen/b7" android:layout_height="@dimen/b7" android:src="@drawable/dm" android:tint="@android:color/white" />
            <TextView android:textSize="11.0dp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/fc" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <ImageView android:id="@id/c7" android:padding="@dimen/b6" android:layout_width="@dimen/b7" android:layout_height="@dimen/b7" android:layout_marginLeft="16.0dp" android:layout_marginTop="@dimen/b5" android:layout_marginRight="16.0dp" android:layout_marginBottom="@dimen/b5" android:src="@drawable/e4" android:tint="@android:color/white" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/m9" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/ce" android:padding="@dimen/b6" android:layout_width="@dimen/b7" android:layout_height="@dimen/b7" android:layout_marginLeft="16.0dp" android:layout_marginTop="@dimen/b5" android:layout_marginRight="16.0dp" android:layout_marginBottom="@dimen/b5" android:src="@drawable/d8" android:tint="@android:color/white" android:layout_below="@id/c7" android:layout_alignParentRight="true" android:contentDescription="@string/pg" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/cb" android:padding="@dimen/b6" android:layout_width="@dimen/b7" android:layout_height="@dimen/b7" android:layout_marginLeft="16.0dp" android:layout_marginRight="16.0dp" android:src="@drawable/cu" android:tint="@android:color/white" android:layout_alignTop="@id/c7" android:layout_alignParentLeft="true" android:contentDescription="@string/qb" android:layout_alignParentStart="true" />
    </RelativeLayout>
</merge>
